Add dynamic url parameters for events

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
     <meta name="description" content="Starter code for MERN project with authentication" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <script defer src="./assets/js/scripts.js"></script>
-    <title>j0w0: MERN + Auth Starter</title>
+    <title>EVNTZ</title>
 </head>
 
 <body>
